Fixed: can't login with google on both theatre and admin panel issue

--- a/views/partials/login-layout.hbs
+++ b/views/partials/login-layout.hbs
@@ -16,6 +16,7 @@
 
 <body>
     {{{body}}}
+    <script src="/javascripts/script.js"></script>
     <script src="/assets/js/login.js"></script>
 </body>
 
